--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+ascii==3.6
 click==7.1.2
 DateTime==4.3
 dnspython==2.1.0
 Flask==1.1.2
 Flask-PyMongo==2.3.0
 itsdangerous==1.1.0
+Pillow==8.1.0
 pymongo==3.11.2
 pytz==2020.5
 Werkzeug==1.0.1
